feat: implement role-permission mapping service, add startup runner for Redis synchronization, and refactor user-related controllers and DTOs